feat(maven/htmx-demo): add jedis to interact with redis